[PLUTO-393]: updating CSS to prevent window overlap: now the #content and #navigation divs float top. (trunk)
git-svn-id: https://svn.apache.org/repos/asf/portals/pluto/trunk@554478 13f79535-47bb-0310-9956-ffa450edef68

--- a/pluto-portal/src/main/webapp/pluto.css
+++ b/pluto-portal/src/main/webapp/pluto.css
@@ -88,7 +88,7 @@ a.tooltip:hover span.tooltip {
 /** 'content' block **/
 
 #content {
-
+  float: top;
 }
 
 /** 'portlet' block **/
@@ -228,7 +228,7 @@ input {
 
 #navigation {
     position: relative;
-    float: left;
+    float: top;
     width: 100%;
     padding: 0 0 1.75em 1em;
     margin: 0;
